2009-10-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/violation.pm: Tighter validation in violation_trigger when
	database query returns a non-empty array (which is a bigger problem yet
	to be identified)

2009-10-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/pf-release: Version bump to 1.8.5

	* pf/docs/PacketFence_Administration_Guide.odt: Integrated release
	notes
	
	* pf/docs/PacketFence_Developers_Guide.odt,
	pf/docs/PacketFence_Installation_Guide.odt: Bumped release month

	* pf/installer.pl: Refer to database schema symlink instead of using a
	hardcoded version number

	* pf/installer.pl: Got rid of dead installer code

	* pf/t/SNMP.t, pf/t/critic.t, pf/t/pf.t, pf/t/pfcmd.t, pf/t/php.t,
	 pf/t/pod.t: Test file list update

2009-10-26	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: Added newly supported
	switches to the Web Admin

	* pf/conf/templates/httpd.conf.apache22,
	pf/conf/templates/httpd.conf.pre_apache22: Using temporary redirects
	instead of permanent ones in the captive portal. Fixes #757;
	http://packetfence.org/mantis/view.php?id=757
	Reported by Josh Ward (he also suggested the fix) Many thanks!

	* pf/packetfence.spec: Parse::RecDescent is a build dependency AND a 
	runtime one. Hopefully fixes #806 for good;
	http://packetfence.org/mantis/view.php?id=806

	* pf/packetfence.spec, pf/installer.pl: Packaging and installer fixes
	- Parse::RecDescent is a build dependency not a runtime one. Fixes #806;
	  http://packetfence.org/mantis/view.php?id=806
	- Pulling php-pear-Log instead of php-pear. Fixes #804
	  http://packetfence.org/mantis/view.php?id=804
	- jpgraph is no longer installed by installer.pl (is a dep of the rpm)
	- php-pear-Log is no longer installed by installer
	- Lots of new TODO task for installer

	* pf/lib/pf/pfcmd/pfcmd.pm: Removed use of Log::Log4perl